test/expected/regression-http-close.txt
/scripts/regression-http-close.js:20
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:20:15)
    at Object.onceWrapper (events.js:314:30)
    at emitNone (events.js:105:13)
    at Server.emit (events.js:207:7)
    at emitCloseNT (net.js:1642:8)
    at _combinedTickCallback (internal/process/next_tick.js:138:11)
    at process._tickCallback (internal/process/next_tick.js:201:9)
    at internalNextTick (internal/process/next_tick.js:322:7)
    at Server._emitCloseIfDrained (net.js:1636:3)
    at Server.close (net.js:1620:10)
    at IncomingMessage.end (/scripts/regression-http-close.js:19:14)
    at Object.onceWrapper (events.js:314:30)
    at emitNone (events.js:110:20)
    at IncomingMessage.emit (events.js:207:7)
    at endReadableNT (_stream_readable.js:1047:12)
    at _combinedTickCallback (internal/process/next_tick.js:141:11)
    at process._tickCallback (internal/process/next_tick.js:201:9)
    at process.nextTick (internal/process/next_tick.js:291:7)
    at endReadable (_stream_readable.js:1038:13)
    at IncomingMessage.Readable.read (_stream_readable.js:460:7)
    at flow (_stream_readable.js:835:34)
    at resume_ (_stream_readable.js:817:3)
    at _combinedTickCallback (internal/process/next_tick.js:141:11)
    at process._tickCallback (internal/process/next_tick.js:201:9)
    at process.nextTick (internal/process/next_tick.js:291:7)
    at resume (_stream_readable.js:804:13)
    at IncomingMessage.Readable.resume (_stream_readable.js:796:5)
    at IncomingMessage.Readable.on (_stream_readable.js:766:12)
    at ClientRequest.get (/scripts/regression-http-close.js:16:9)
    at Object.onceWrapper (events.js:316:30)
    at emitOne (events.js:115:13)
    at ClientRequest.emit (events.js:210:7)
    at HTTPParser.parserOnIncomingClient (_http_client.js:564:21)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:116:23)
    at Socket.socketOnData (_http_client.js:453:20)
    at emitOne (events.js:115:13)
    at Socket.emit (events.js:210:7)
    at addChunk (_stream_readable.js:252:12)
    at readableAddChunk (_stream_readable.js:239:11)
    at Socket.Readable.push (_stream_readable.js:197:10)
    at TCP.onread (net.js:589:20)
    at tickOnSocket (_http_client.js:631:10)
    at onSocketNT (_http_client.js:683:5)
    at _combinedTickCallback (internal/process/next_tick.js:141:11)
    at process._tickCallback (internal/process/next_tick.js:201:9)
    at process.nextTick (internal/process/next_tick.js:291:7)
    at ClientRequest.onSocket (_http_client.js:671:11)
    at _http_agent.js:191:11
    at oncreate (_http_agent.js:237:5)
    at Agent.createSocket (_http_agent.js:224:5)
    at Agent.addRequest (_http_agent.js:184:10)
    at new ClientRequest (_http_client.js:272:16)
    at request (http.js:39:10)
    at Object.get (http.js:43:13)
    at Server.listen (/scripts/regression-http-close.js:15:8)
    at Object.onceWrapper (events.js:314:30)
    at emitNone (events.js:105:13)
    at Server.emit (events.js:207:7)
    at emitListeningNT (net.js:1342:10)
    at _combinedTickCallback (internal/process/next_tick.js:138:11)
    at process._tickCallback (internal/process/next_tick.js:201:9)
    at internalNextTick (internal/process/next_tick.js:322:7)
    at Server.setupListenHandle [as _listen2] (net.js:1329:3)
    at listenInCluster (net.js:1363:12)
    at GetAddrInfoReqWrap.doListen [as callback] (net.js:1489:7)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:97:10)
    at createServerHandle (net.js:1239:14)
    at Server.setupListenHandle [as _listen2] (net.js:1295:14)
    at listenInCluster (net.js:1363:12)
    at GetAddrInfoReqWrap.doListen [as callback] (net.js:1489:7)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:97:10)
    at Object.lookup (dns.js:180:19)
    at lookupAndListen (net.js:1484:7)
    at Server.listen (net.js:1459:7)
    at Object.<anonymous> (/scripts/regression-http-close.js:11:4)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
